Work on reader